# docx2Json

./: .gitignore  Cargo.toml  LICENSE  README.md  about.toml  deny.toml  test-patterns.md
.github/workflows/: cd.yml  ci.yml
docs/: roadmap10_implementation_plan.md  roadmap12_implementation_plan.md
samples/: docx2json.json  make_test_xlsx.py
samples/xlsx/: large_rows.xlsx  merged_cells.xlsx  multi_block.xlsx  r7ichiran2.adoc  r7ichiran2.json  simple.xlsx
src/: ai.rs  config.rs  main.rs  models.rs  output.rs  splitter.rs
src/commands/: extract_candidates.rs  inject_tags.rs  inspect_styles.rs  mod.rs  summarize.rs  to_asciidoc.rs
src/parser/: docx.rs  emf.rs  mod.rs  pptx.rs  xlsx.rs  xlsx_advanced.rs
