[package]
name = "docx2json"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "docx2json"
path = "src/main.rs"

[dependencies]
zip = "2"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", optional = true }

[features]
ai = ["ureq"]
