[package]
name = "docx2json"
version = "0.4.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "docx2json"
path = "src/main.rs"

[dependencies]
anyhow = "1"
zip = "2"
quick-xml = "0.37"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
regex = "1"
indicatif = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }
